@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-23T01:15:17Z",
-  "count_outdated" : 1771,
-  "uniques_outdated" : 1012,
-  "count" : 1785,
-  "uniques" : 1026,
+  "timestamp" : "2025-02-24T01:12:34Z",
+  "count_outdated" : 1772,
+  "uniques_outdated" : 1013,
+  "count" : 1787,
+  "uniques" : 1028,
   "clones" : [
-    {
-      "timestamp": "2025-02-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-12T00:00:00Z",
       "count": 2,
@@ -103,6 +94,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-23T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
