@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 5,
+  "count": 15,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2025-02-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-12T00:00:00Z",
       "count": 2,
@@ -56,6 +51,11 @@
       "timestamp": "2025-02-22T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-23T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
